[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/bars/bar_fill.png" type="Texture" id=1]
[ext_resource path="res://ui/bars/bar_fg2.png" type="Texture" id=2]
[ext_resource path="res://ui/bars/bar_fill2.png" type="Texture" id=3]
[ext_resource path="res://ui/bars/bar_fg.png" type="Texture" id=4]
[ext_resource path="res://ui/bars/bar_bg.png" type="Texture" id=5]
[ext_resource path="res://ui/stars.png" type="Texture" id=6]
[ext_resource path="res://Game.gd" type="Script" id=7]
[ext_resource path="res://ui/missile-pod.png" type="Texture" id=8]
[ext_resource path="res://ui/beam-wake.png" type="Texture" id=9]
[ext_resource path="res://ui/SkillButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/spiky-field.png" type="Texture" id=11]
[ext_resource path="res://ui/fonts/Kenney Future.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 12 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 512 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )

[node name="Cutscene" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Intro" type="VBoxContainer" parent="Cutscene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -33.5
margin_right = 162.0
margin_bottom = 33.5

[node name="Title" type="Label" parent="Cutscene/Intro"]
margin_right = 324.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Mission 1"

[node name="Subtitle" type="Label" parent="Cutscene/Intro"]
margin_top = 40.0
margin_right = 324.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "Chain of Command"
align = 2

[node name="Warning" type="CenterContainer" parent="Cutscene"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Outro" type="VBoxContainer" parent="Cutscene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="MainMenu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -52.0
margin_right = 85.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="MainMenu"]
margin_right = 170.0
margin_bottom = 14.0
text = "Concord Assault Remake"
align = 1

[node name="Label2" type="Label" parent="MainMenu"]
margin_top = 18.0
margin_right = 170.0
margin_bottom = 32.0
text = "Vertical Shmup Framework"
align = 1

[node name="BtnStart" type="Button" parent="MainMenu"]
margin_top = 36.0
margin_right = 170.0
margin_bottom = 56.0
text = "Start Game"

[node name="BtnInstructions" type="Button" parent="MainMenu"]
margin_top = 60.0
margin_right = 170.0
margin_bottom = 80.0
text = "Instructions"

[node name="BtnCredits" type="Button" parent="MainMenu"]
margin_top = 84.0
margin_right = 170.0
margin_bottom = 104.0
text = "Credits"

[node name="HUDLeft" type="VBoxContainer" parent="."]
visible = false
margin_right = 128.0
margin_bottom = 54.0

[node name="Score" type="Label" parent="HUDLeft"]
margin_right = 128.0
margin_bottom = 14.0
text = "SCORE"

[node name="BarHP" type="TextureProgress" parent="HUDLeft"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 34.0
value = 100.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="BarShield" type="TextureProgress" parent="HUDLeft"]
margin_top = 38.0
margin_right = 128.0
margin_bottom = 54.0
value = 100.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 1 )

[node name="HUDRight" type="VBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -200.0

[node name="SkillButton" parent="HUDRight" instance=ExtResource( 10 )]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 9 )
cooldown_time = 10.0

[node name="SkillButton2" parent="HUDRight" instance=ExtResource( 10 )]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
texture_normal = ExtResource( 8 )
cooldown_time = 10.0
hotkey = "X"

[node name="SkillButton3" parent="HUDRight" instance=ExtResource( 10 )]
margin_top = 136.0
margin_right = 64.0
margin_bottom = 200.0
texture_normal = ExtResource( 11 )
cooldown_time = 10.0
hotkey = "C"

[node name="GameOver" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -39.5
margin_right = 65.0
margin_bottom = 39.5

[node name="Label" type="Label" parent="GameOver"]
margin_right = 130.0
margin_bottom = 31.0
text = "GAME OVER
YEEEEEEEEEAAAAHH!"
align = 1

[node name="BtnRestart" type="Button" parent="GameOver"]
margin_top = 35.0
margin_right = 130.0
margin_bottom = 55.0
text = "Restart"

[node name="BtnQuit" type="Button" parent="GameOver"]
margin_top = 59.0
margin_right = 130.0
margin_bottom = 79.0
text = "Quit to Title"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="MainMenu/BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="MainMenu/BtnInstructions" to="." method="_on_BtnInstructions_pressed"]
[connection signal="pressed" from="MainMenu/BtnCredits" to="." method="_on_BtnCredits_pressed"]
[connection signal="pressed" from="GameOver/BtnRestart" to="." method="_on_BtnRestart_pressed"]
[connection signal="pressed" from="GameOver/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
